# capstone-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb  test.json  test.py
backend/: gen_lambda_function.py  lambda_function.py  test_locally.py
client/: .flutter-plugins  .flutter-plugins-dependencies  README.md  analysis_options.yaml  pubspec.yaml
client/.dart_tool/: package_config.json  package_config_subset
client/android/app/: build.gradle  google-services.json
client/firebase/: firestore.indexes.json  firestore.rules
client/firebase/functions/: package.json
client/lib/: app_state.dart  index.dart  main.dart
client/lib/actions/: actions.dart
client/lib/auth/firebase_auth/: auth_util.dart  firebase_auth_manager.dart  firebase_user_provider.dart  google_auth.dart
client/lib/backend/: backend.dart
client/lib/backend/api_requests/: api_calls.dart  api_manager.dart
client/lib/backend/firebase/: firebase_config.dart
client/lib/backend/gemini/: gemini.dart
client/lib/backend/schema/: documents_record.dart  index.dart  users_record.dart
client/lib/flutter_flow/nav/: nav.dart
client/lib/image_processing/widgets/: image_picker_view.dart
client/lib/page_ui/: flutter_ui_util.dart  page_ui_choice_chips.dart  page_ui_model.dart  page_ui_theme.dart  page_ui_util.dart  upload_data.dart
client/lib/page_ui/nav/: nav.dart  serialization_util.dart
client/test/: widget_test.dart
jellygrammar/api/: __init__.py  analysis.py  dashboard.py  jellygrammar_v240407.py  jellygrammar_v240419.py  jellygrammar_v240527.py
(+38 files in other folders)
