[tool.poetry]
name = "capstonegrammar"
version = "0.1.0"
description = ""
authors = ["ghlee7411"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
functions-framework = "^3.5.0"
httpx = "^0.27.0"
google-generativeai = "^0.4.1"
google-cloud-firestore = "^2.15.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
